2011-04-11  Paul Eggert  <eggert@cs.ucla.edu>

	font.c: Make copy_font_spec and merge_font_spec ordinary C functions.
	* font.c (copy_font_spec): Rename from Fcopy_font_spec, since it
	was inaccessible from Lisp.
	(merge_font_spec): Likewise, renaming from Fmerge_font_spec.
	* font.c, font.h, fontset.c, xfaces.c, xfont.c: Change all uses.

	alloc.c: Import and export fewer symbols, and remove unused items.
	* lisp.h (suppress_checking, die): Declare only if ENABLE_CHECKING
	is defined.
	(suppress_checking): Add EXTERNALLY_VISIBLE attribute, so that
	it's not optimized away by whole-program optimization.
	(message_enable_multibyte, free_misc): Remove.
	(catchlist, handlerlist, mark_backtrace):
	Declare only if BYTE_MARK_STACK.
	(mark_byte_stack): Likewise, fixing a ifdef-vs-if typo.
	* alloc.c (pure): Export only if VIRT_ADDR_VARIES is defined.
	(message_enable_multibyte): Remove decl.
	(free_misc, interval_free_list, float_block, float_block_index):
	(n_float_blocks, float_free_list, cons_block, cons_block_index):
	(cons_free_list, last_marked_index):
	Now static.
	(suppress_checking, die): Define only if ENABLE_CHECKING is defined.
	* eval.c (catchlist, handlerlist): Export only if BYTE_MARK_STACK.
	(mark_backtrace): Define only if BYTE_MARK_STACK.
	* xdisp.c (message_enable_multibyte): Now static.

	Declare Lisp_Object Q* variables to be 'static' if not exproted.
	This makes it easier for human readers (and static analyzers)
	to see whether these variables are used from other modules.
	* alloc.c, buffer.c, bytecode.c, callint.c, casetab.c, category.c:
	* ccl.c, character.c, charset.c, cmds.c, coding.c, composite.c:
	* data.c, dbusbind.c, dired.c, editfns.c, eval.c, fileio.c, fns.c:
	* font.c, frame.c, fringe.c, ftfont.c, image.c, keyboard.c, keymap.c:
	* lread.c, macros.c, minibuf.c, print.c, process.c, search.c:
	* sound.c, syntax.c, textprop.c, window.c, xdisp.c, xfaces.c, xfns.c:
	* xmenu.c, xselect.c: